--- a/Site Templates/index.html
+++ b/Site Templates/index.html
@@ -188,6 +188,13 @@
     <script src="assets/js/skel.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://cdn.cai.tools.sap/webchat/webchat.js"
+     channelId="43ddbe96-09c2-4a78-8251-fb7856a3d51a"
+     token="a37c2b6d7ba27ce0f6928ec1b8bda3a7"
+     id="cai-webchat"
+     ></script>
+	
+     <meta name="viewport" content="width=device-width">
 
 </body>
 
